syntax = "proto3";
package proto;
option go_package = ".";

service Ohlc {
    rpc GetSummary(GetSummaryRequest) returns (GetSummaryResponse) {}
}

message GetSummaryRequest{
    string StockName = 1;
}

message GetSummaryResponse{
    int32 PreviousPrice = 1;
	int32 OpenPrice = 2;  
	int32 HighestPrice = 3;
	int32 LowestPrice = 4;
	int32 ClosePrice = 5;   
	int32 AveragePrice = 6;
	int32 Volume = 7;
	int32 Value = 8;   
}